--- a/freelancer/package.json
+++ b/freelancer/package.json
@@ -32,7 +32,6 @@
     "gulp-uglify": "^3.0.0",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-watch": "^5.0.0",
-    "imagemin-pngquant": "^5.0.1",
-    "tiny-lr": "^1.1.0"
+    "imagemin-pngquant": "^5.0.1"
   }
 }
